--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -1,6 +1,6 @@
 .photo-details-modal {
   background-color: white;
-  box-shadow: 0 0 0 50vmax rgba(0,0,0,.5);
+  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, .5);
   position: absolute;
   top: 55%;
   left: 50%;
@@ -31,7 +31,7 @@
 
 .photo-details-modal__image {
   max-width: 95%;
-  border-radius: 8px;
+  max-height: 80%;
 }
 
 .photo-details-modal__top-bar {
@@ -52,14 +52,16 @@
   font-size: 18px;
   font-weight: 500;
   color: #1e1e1e;
+  padding-left: 2.5%;
   margin-top: 24px;
   margin-bottom: 24px;
-  width: 90%;
+  width: 100%;
 }
 
 .photo-details-modal__photographer-location {
   color: #838383;
 }
+
 .photo-details-modal__photographer-profile {
   object-fit: cover;
   border-radius: 100%;
